feat: add option to install it as PWA
- feat: add option to install it as PWA
- chore: small css improvements
- build: add ssl for localhost
- update TODO.md and CHANGELOG.md

--- a/src/app/shared/components/input-checkbox/input-checkbox.component.scss
+++ b/src/app/shared/components/input-checkbox/input-checkbox.component.scss
@@ -53,7 +53,7 @@
 
         &:not(.disabled) {
             .ripple {
-                @include device(desktop) {
+                @media (hover: hover) {
                     &:hover,
                     &:focus,
                     &:focus-visible {
@@ -79,7 +79,7 @@
                 }
 
                 &.erroneous {
-                    @include device(desktop) {
+                    @media (hover: hover) {
                         &:hover,
                         &:focus,
                         &:focus-visible {
