--- a/src/app/shared/components/input-inspiration/input-inspiration.component.scss
+++ b/src/app/shared/components/input-inspiration/input-inspiration.component.scss
@@ -46,7 +46,7 @@
         }
 
         &:not(.disabled) {
-            @include device(desktop) {
+            @media (hover: hover) {
                 &:hover,
                 &:focus,
                 &:focus-visible {
