--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -33,7 +33,7 @@
         }
 
         &:not(.disabled) {
-            @include device(desktop) {
+            @media (hover: hover) {
                 &:hover,
                 &:focus,
                 &:focus-visible {
