improvement: load JSON files with current version as query parameter

--- a/src/app/routes/base/base/base.component.scss
+++ b/src/app/routes/base/base/base.component.scss
@@ -55,6 +55,11 @@
         }
     }
 
+    .inspiration-container,
+    .currency-container {
+        padding-block-end: var(--small-spacing);
+    }
+
     .currency-container {
         &-form,
         &-actions {
