--- a/src/app/routes/base/base/base.component.html
+++ b/src/app/routes/base/base/base.component.html
@@ -50,7 +50,8 @@
     </div>
 </ng-container>
 
-<div class="divider" role="separator" aria-label="Divider"></div>
+<div class="divider" role="separator" aria-label="Divider">
+</div>
 
 <div class="currency-container">
     <h3>{{ 'BASE.CURRENCY.TITLE' | translate }}</h3>
@@ -79,7 +80,7 @@
         <dnd-button text="BASE.ACTIONS.SUBTRACT" (click)="updateCurrency('-')" [disabled]="!currencyForm.valid">
         </dnd-button>
 
-        <dnd-button text="BASE.ACTIONS.RESET" (click)="showResetConfirmDialog()"
+        <dnd-button text="BASE.ACTIONS.RESET" (click)="showCurrencyResetConfirmDialog('resetCurrency')"
             [disabled]="!currencyForm.valid || currencyValue === 0" [alternateStyle]="true" class="pt">
         </dnd-button>
     </div>
@@ -90,16 +91,43 @@
     </div>
 </div>
 
+<div class="divider" role="separator" aria-label="Divider">
+</div>
+
+<div class="sleep-container">
+    <h3>{{ 'BASE.SLEEP.TITLE' | translate }}</h3>
+
+    <form class="sleep-container-form" [formGroup]="sleepForm">
+        <dnd-radio-group label="BASE.SLEEP.LABEL" [labelInterpolateParams]="{ value: 1 }" [options]="radioOptions"
+            [formControl]="sleep1FormControl">
+        </dnd-radio-group>
+        <dnd-radio-group label="BASE.SLEEP.LABEL" [labelInterpolateParams]="{ value: 2 }" [options]="radioOptions"
+            [formControl]="sleep2FormControl">
+        </dnd-radio-group>
+        <dnd-radio-group label="BASE.SLEEP.LABEL" [labelInterpolateParams]="{ value: 3 }" [options]="radioOptions"
+            [formControl]="sleep3FormControl">
+        </dnd-radio-group>
+    </form>
+
+    <div class="sleep-container-actions">
+        <dnd-button text="BASE.ACTIONS.RESET" (click)="showCurrencyResetConfirmDialog('resetSleep')"
+            [alternateStyle]="true">
+        </dnd-button>
+    </div>
+</div>
+
 <dialog #dialog class="dialog">
     <ng-container [ngSwitch]="activeDialog">
-        <ng-container *ngSwitchCase="'reset'" [ngTemplateOutlet]="resetDialog">
+        <ng-container *ngSwitchCase="'resetCurrency'" [ngTemplateOutlet]="resetCurrencyDialog">
+        </ng-container>
+        <ng-container *ngSwitchCase="'resetSleep'" [ngTemplateOutlet]="resetSleepDialog">
         </ng-container>
         <ng-container *ngSwitchCase="'special'" [ngTemplateOutlet]="specialDialog">
         </ng-container>
     </ng-container>
 </dialog>
 
-<ng-template #resetDialog>
+<ng-template #resetCurrencyDialog>
     <h4 class="dialog-title my-0">
         {{ 'BASE.ACTIONS.RESET' | translate }}
     </h4>
@@ -111,6 +139,22 @@
         <dnd-button text="BASE.ACTIONS.CANCEL" (click)="closeDialog()">
         </dnd-button>
         <dnd-button text="BASE.ACTIONS.RESET" (click)="updateCurrency('0')" [alternateStyle]="true">
+        </dnd-button>
+    </div>
+</ng-template>
+
+<ng-template #resetSleepDialog>
+    <h4 class="dialog-title my-0">
+        {{ 'BASE.ACTIONS.RESET' | translate }}
+    </h4>
+    <p class="dialog-content">
+        {{ 'BASE.SLEEP.RESET' | translate }}
+    </p>
+
+    <div class="dialog-actions">
+        <dnd-button text="BASE.ACTIONS.CANCEL" (click)="closeDialog()">
+        </dnd-button>
+        <dnd-button text="BASE.ACTIONS.RESET" (click)="resetSleep()" [alternateStyle]="true">
         </dnd-button>
     </div>
 </ng-template>
